# obs-AVerMediaCenter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  avermedia_deps.cmake  buildspec.json
.github/scripts/: .package.zsh  Package-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
cmake/macos/resources/: distribution.in  installer-macos.pkgproj.in
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  ko-KR.ini  ru-RU.ini  th-TH.ini  zh-CN.ini  zh-TW.ini
i18n/: zh_TW.isl
sdk/menu-manager/: menu-manager.cmake
sdk/menu-manager/include/: AvtObsMenuManager.h  AvtObsMenuManager_global.h
sdk/menu-manager/lib/: avt-obs-menu-manager.exp  avt-obs-menu-manager.lib  avt-obs-menu-manager_static.lib  libavt-obs-menu-manager.dylib
sdk/plugin-module/: plugin-module.cmake
sdk/plugin-module/include/: AvtEvent.hpp  BrowserInterface.hpp  Logger.h  PluginModule.h  PluginModule_global.h
sdk/plugin-module/lib/: AvtPluginModule.lib
src/: ObsCloseHelper.cpp  ObsCloseHelper.h  ObsCloseHelper.mm  PluginModuleForMac.cpp  obs-browser-panel.hpp  plugin-main.cpp
